# SYA

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  build-packages.sh  cookies.txt  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  start-sya.sh  start.sh  stop-sya.sh  stop.sh  turbo.json
apps/api/: .env.example  Cargo.toml  Dockerfile  env.example
apps/api/migrations/: 0001_init.sql
apps/api/src/: auth_extractor.rs  config.rs  globals.rs  lib.rs  main.rs
apps/api/src/controllers/: auth.rs  conversations.rs  mod.rs  ollama.rs
apps/api/src/handlers/: conversations.rs  health.rs  mod.rs  ollama.rs
apps/api/src/models/: conversation.rs  message.rs  mod.rs  user.rs
apps/api/src/routes/: auth.rs  chat.rs  conversations.rs  mod.rs
apps/api/src/services/: auth.rs  conversation.rs  mod.rs  ollama.rs  user.rs
apps/api/tests/: auth_extractor_tests.rs  auth_service_tests.rs  common.rs  config_tests.rs
apps/api/tests/integration/: conversation_flow.rs  helpers.rs  mod.rs  unauthorized.rs  user_flow.rs
apps/web/: Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.json
apps/web/lib/: api-client.ts  api.ts  server-auth.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/components/: ChatInput.tsx  ChatLayout.tsx  Header.tsx  Logo.tsx  MessageItem.tsx  Messages.tsx  ModelCombobox.tsx  nav-main.tsx  (+6 more)
scripts/: deploy-landing.sh
scripts/distribution/: build-all.sh  create-macos-app.sh  create-package.sh  create-windows-app.sh  create-windows-installer.sh
(+33 files in other folders)
