[package]
name = "api"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
base64ct = "=1.7.3"
actix-web = "4"
actix-cors = "0.6"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.18.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros"] }

[[bin]]
name = "api"
path = "src/main.rs"
